# conserver

./: .cirrus.yml  .gitignore  CHANGES  FAQ  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  PROTOCOL  README  README-LICENSE.md  README.md  TODO  acconfig.h  compat.h  config.h.in  configure  configure.ac  configure.in  conserver.html
autologin/: INSTALL.old  Makefile  Makefile.in  Makemodule.am  README  README.old  autologin.8  autologin.8.in  autologin.c  autologin.m  autologin.man  main.c  main.h
conserver/: INSTALL  Makefile  Makefile.in  Makemodule.am  README.old  Sun-serial  TODO  access.c  access.h  client.c  client.h  cons-default.h  cons-gnac.h  cons-test.h  cons.h  consent.c  consent.h  conserver.8.in  conserver.8l  conserver.man  conserver.man.in  conserver.passwd  conserver.rc  conserver.rc.in  convert.c  cutil.c  cutil.h  fallback.c  group.c  group.h  identd.c  init.script  main.c  main.h  master.c  master.h  output.c  output.h  port.h  readcfg.c  (+5 more)
conserver.cf/: INSTALL  Makefile  Makefile.in  Makemodule.am  README.old  conserver.cf  conserver.cf.5.in  conserver.cf.5l  conserver.cf.man  conserver.cf.man.in  conserver.passwd  conserver.passwd.5.in  conserver.passwd.man  conserver.passwd.man.in  dummy.cf  label.ps  test.cf
conserver.cf/samples/: README  average-distributed.cf  average.cf  basic.cf  simple.cf
console/: INSTALL.old  Makefile  Makefile.in  Makemodule.am  README  console.1.in  console.8l  console.c  console.man  console.man.in  getpassword.c  getpassword.h  readconf.c  readconf.h
contrib/: Makemodule.am  README  maketestcerts
contrib/chat/: Makefile.in  README  chat.8  chat.8.in  chat.c
contrib/redhat-rpm/: README  conserver.defaults  conserver.init  conserver.spec
contrib/solaris-package/: Makefile  man_tbl_header  pkginfo  prototype
package/: README.md  create-changes  get-version  make-and-stage-release  replicate-version-number  run-gindent  setup-configure
port/: BSDOS3  IRIX6  Linux2  README  SunOS5  system
test/: Makemodule.am  dotest  test.cf  test1.cf  test2.cf
test/results/: test1  test10  test11  test12  test13  test14  test15  test2  test3  test5  test6  test7  test8  test9
